--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@vinejs/vine": "^2.1.0",
     "cloudinary": "^2.3.1",
     "edge.js": "^6.0.2",
+    "infinite-scroll": "^4.0.1",
     "luxon": "^3.4.4",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2"
